Made some changes to the margin of the hero-over-lay-box, cause there were some issues regarding spacing between the navigation bar. Will suggest this change to the rest of the team members also.

--- a/Min-seo/Activities/activities.css
+++ b/Min-seo/Activities/activities.css
@@ -196,6 +196,7 @@
     }
 
     .hero-overlay-box {
+        margin-top: 50px;
         max-width: 520px;
         padding: 28px;
     }
@@ -216,10 +217,11 @@
 
 @media (max-width: 767px) {
     .hero-banner {
-        padding: 50px;
+        padding: 60px;
     }
 
     .hero-overlay-box {
+        margin-top: 50px;
         max-width: 420px;
         padding: 22px;
     }
